styling fellow footer

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4054,7 +4054,7 @@ FELLOWS
 
 }
 
-.class-year {   padding: 60px 0 44px 0;}
+.sponsorship, .class-year {   padding: 60px 0 44px 0;}
 .class-year:nth-of-type(1) { padding-top: 0px; 
 			   }
 
