--- a/app/views/pages/_fellows.html.erb
+++ b/app/views/pages/_fellows.html.erb
@@ -48,7 +48,7 @@
 			</div>
 		    <% end %>
 		<% end %>
-		<div class='class-year'>
+		<div class='sponsorship'>
 		    <div class="container page-content">
 			<div class='row'>
 			    <div class='col-md-9'>
