--- a/app/views/resources/_author.html.erb
+++ b/app/views/resources/_author.html.erb
@@ -3,9 +3,9 @@
 
 	<% if author.avatar_url %>
 	    <%= cl_image_tag(author.avatar_url,
-			     :type => :fetch, :width => 350, :height => 350, :invalidate => true, :cloud_name => 'bssw') %>
+			     :type => :fetch, :invalidate => true, :cloud_name => 'bssw', class: 'fellows-photo') %>
 	<% else %>
-<img src="https://raw.githubusercontent.com/betterscientificsoftware/bssw.io/master/images/People_BSSwContributor.png" />
+<img src="https://raw.githubusercontent.com/betterscientificsoftware/bssw.io/master/images/People_BSSwContributor.png" class="fellows-photo" />
 
 	<% end %>
 
@@ -13,22 +13,13 @@
 	<h3>
 	    <%= link_to "#{author.first_name} #{author.last_name}", site_items_path(:author => author.slug) %>
 	</h3>
-	<% if author.title %>
+
+	<% if author.title && @page %>
 	    <p><%= author.title %></p>
 	<% end %>
 
-	<p>
-	    <% unless @page && @page.name == 'About' %>
-<%= listings(author) %>
-	    <% end %>
-	</p>
-
 	<% if author.affiliation %>
-	    <p><strong>Affiliation(s):</strong> <%= author.affiliation %></p>
-	<% end %>
-
-	<% if author.website %>
-	    <p class="offsite"><%= link_to "Github", author.website %> </p>
+	    <%= author.affiliation %></p>
 	<% end %>
 
 
