--- a/app/views/pages/_team.html.erb
+++ b/app/views/pages/_team.html.erb
@@ -11,7 +11,7 @@
 
 				<div class="row">
 				    <% staff.each do |author| %>
-					<%= render 'resources/author', :author => author %>
+					<%= render 'resources/author', :author => author, :section => section %>
 				    <% end %>
 				</div>
 
