--- a/app/views/resources/_author.html.erb
+++ b/app/views/resources/_author.html.erb
@@ -21,7 +21,7 @@
 	<% end %>
 
 	<% if author.affiliation %>
-	    <%= author.affiliation %>
+	    <%= author.affiliation %><br />
 	<% end %>
 
 </p>
