--- a/app/views/resources/_author.html.erb
+++ b/app/views/resources/_author.html.erb
@@ -21,7 +21,7 @@
 	<% end %>
 
 	<% if author.affiliation && @page && @page.try(:name) == 'Team' %>
-	    <%= author.affiliation %><br />
+<br />	    <%= author.affiliation %><br />
 	<% end %>
 
 </p>
