--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@
 
 @import 'owl.carousel.min';
 @import 'owl.theme.default.min';
+@import 'github';
 
 //@import 'bootstrap-sprockets';
 //@import 'bootstrap';
