--- a/app/views/resources/_author_hero.html.erb
+++ b/app/views/resources/_author_hero.html.erb
@@ -21,7 +21,7 @@
 	</div>
 	<div class="row">
 <% unless @author.avatar_url.blank? %>
-	    <div class="col-xl-4 col-lg-4 col-md-5 col-sm-12 col-12 ">
+	    <div class='col-xl-3 col-lg-3 col-md-5 col-sm-12 col-12'>
 		<%= cl_image_tag(@author.avatar_url, :type => :fetch, :invalidate => true, :cloud_name => 'bssw', :class => 'fellows-photo') %>
 
 	    </div>
