--- a/app/views/resources/_author_hero.html.erb
+++ b/app/views/resources/_author_hero.html.erb
@@ -1,41 +1,44 @@
-
-    <div class="main post-event-hero fellows-hero">
-	<div class="container">
-	    <div class="row">
-		<div class="col-12">
-		    <div class="page-heading">
-			<div class="breadcrumbs">
-			    <ul>
-				<li><a href="/">Home</a></li>
-				<li><a href="/items/contributors">Contributors</a></li>
-				<li class="active"> <%= @author.first_name %> <%= @author.last_name %></li>
-				
-			    </ul>
+<div class="main post-event-hero fellows-hero">
+    <div class="container">
+	<div class="row">
+	    <div class="col-12">
+		<div class="row">
+		    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+			<div class="page-heading">
+			    <div class="breadcrumbs">
+				<ul>
+				    <li><a href="/">Home</a></li>
+				    <li><a href="/items/contributors">Contributors</a></li>
+				    <li class="active"> <%= @author.first_name %> <%= @author.last_name %></li>
+				    
+				</ul>
+			    </div>
 			</div>
 		    </div>
 		</div>
 	    </div>
-	    <div class="row">
-		<div class="col-12">
+	</div>
+	<div class="row">
+	    <div class="col-12">
 		<h1 > <%= @author.first_name %> <%= @author.last_name %></h1></div>
 	</div>
 	<div class="row">
-<% unless @author.avatar_url.blank? %>
-	    <div class='col-xl-3 col-lg-3 col-md-5 col-sm-12 col-12'>
-		<%= cl_image_tag(@author.avatar_url, :type => :fetch, :invalidate => true, :cloud_name => 'bssw', :class => 'fellows-photo') %>
+	    <% unless @author.avatar_url.blank? %>
+		<div class='col-xl-3 col-lg-3 col-md-5 col-sm-12 col-12'>
+		    <%= cl_image_tag(@author.avatar_url, :type => :fetch, :invalidate => true, :cloud_name => 'bssw', :class => 'fellows-photo') %>
 
-	    </div>
-<% end %>
+		</div>
+	    <% end %>
 	    <div class="col-xl-8 col-lg-8 col-md-7 col-sm-12 col-12">
 		<div class="fellows-info">
 		    <div class="fellows-info-inner">
 			
-<p>
-<% unless @author.affiliation.blank? %>
-<strong>Affiliation(s):</strong> <%= @author.affiliation %><br />
-<% end %>			
+			<p>
+			    <% unless @author.affiliation.blank? %>
+				<strong>Affiliation(s):</strong> <%= @author.affiliation %><br />
+			    <% end %>			
 			    <strong>Contribution<% unless @author.single_contribution %>s<% end %>:</strong>
-<%= listings(@author) %>
+			    <%= listings(@author) %>
 
 			    
 			</p>
@@ -49,5 +52,5 @@
 	    </div>
 	    <p style="clear: both;"></p>
 	</div>	    
-	</div>
     </div>
+</div>
