--- a/app/views/resources/_author_hero.html.erb
+++ b/app/views/resources/_author_hero.html.erb
@@ -13,22 +13,22 @@
 				    
 				</ul>
 			    </div>
+			    <div class="row">
+				<h1 > <%= @author.first_name %> <%= @author.last_name %></h1>
+			    </div>
+			    <div class="row">
+				<% unless @author.avatar_url.blank? %>
+				    <div class='col-xl-3 col-lg-3 col-md-5 col-sm-12 col-12'>
+					<%= cl_image_tag(@author.avatar_url, :type => :fetch, :invalidate => true, :cloud_name => 'bssw', :class => 'fellows-photo') %>
+					
+				    </div>
+				<% end %>
+			    </div>
 			</div>
 		    </div>
 		</div>
 	    </div>
-	</div>
-	<div class="row">
-	    <div class="col-12">
-		<h1 > <%= @author.first_name %> <%= @author.last_name %></h1></div>
-	</div>
-	<div class="row">
-	    <% unless @author.avatar_url.blank? %>
-		<div class='col-xl-3 col-lg-3 col-md-5 col-sm-12 col-12'>
-		    <%= cl_image_tag(@author.avatar_url, :type => :fetch, :invalidate => true, :cloud_name => 'bssw', :class => 'fellows-photo') %>
 
-		</div>
-	    <% end %>
 	    <div class="col-xl-8 col-lg-8 col-md-7 col-sm-12 col-12">
 		<div class="fellows-info">
 		    <div class="fellows-info-inner">
