--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -24,7 +24,7 @@
           </div>
 
           <% if @event.website %>
-          <h4 class="offsite"><a href='<%= @event.website %>' target='_blank'>Event Website</a></h4>
+          <h4 class="offsite"><a href='<%= @event.website %>' target='_blank'><% if @event.website_label %><%= @event.website_label %><% else %>Event Website<% end %></a></h4>
           <% end %>
         </div>
       </div></div>
