--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -147,7 +147,7 @@
               <li>
                 <form class="navbar-form" role="search" method="get" action="/items/search">
                   <div class="input-group">
-                    <input type="text" class="form-control" id="form-control-search" placeholder="Search" name="search_string" value="">
+                    <input type="text" class="form-control" id="form-control-search" placeholder="Search. Use quotes to search phrases." name="search_string" value="">
                     <div class="input-group-btn">
                       <button class="btn" type="submit"><i class="fas fa-search fa-flip-horizontal"></i></button>
                     </div>
