--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -1,6 +1,6 @@
 
 <div class="pagination pagination-top">
-    p <%= @events.current_page %>
+    p <%= @events.current_page %> / p <%= params[:page] %>
     1-<%=
       if @events.current_page*@events.per_page > @events.total_entries
 	  @events.total_entries
