--- a/app/views/events/index.js.erb
+++ b/app/views/events/index.js.erb
@@ -9,4 +9,4 @@ $(".more-top").remove();
 <% end %>
 
 
-  $("#events").replace("<%= escape_javascript render('events', :events => @events ) %>");
+  $("#events").replace("<%= escape_javascript render('events', :events => Event.all ) %>");
