--- a/app/views/events/index.js.erb
+++ b/app/views/events/index.js.erb
@@ -10,3 +10,5 @@ $(".more-top").remove();
 
 
   $("#events").replace("<%= escape_javascript render('events', :events => @events.paginate(page: params[:page]) ) %>");
+
+  $("#events").replace("loaded");
