--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,12 +5,12 @@
     <div class="page-heading">
 	<div class="row">
 	    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-		<div class="breadcrumbs">
-		    <ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="/events">Events</a></li>
-		    </ul>
-		</div>
+		<!-- <div class="breadcrumbs"> -->
+		<!--     <ul> -->
+		<!-- 	<li><a href="#">Home</a></li> -->
+		<!-- 	<li><a href="/events">Events</a></li> -->
+		<!--     </ul> -->
+		<!-- </div> -->
 		<% if @author %>
 		    <h1>Events by Contributor: <%= @author.first_name %> <%= @author.last_name %></h1>
 		<% end %>
