--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -1,4 +1,17 @@
 
+<div class="pagination pagination-top">
+    1-<%=
+      if @events.current_page*@events.per_page > @events.total_entries
+	  @events.total_entries
+      else 
+	  @events.current_page*@events.per_page 
+      end
+      %> of <%= @events.total_entries %> Items  
+    <% if @events.next_page %>
+	| <%= link_to "View All", params.merge(:view => 'all', :page => 1).permit! %>
+    <% end %>
+</div>
+
 <% if @page %>
     <div class="sub-nav-container events-sub-nav">
 	<div class="container">
@@ -51,6 +64,7 @@
     <div class="container more-top">
 	<div class="row">
 	    <div class="col-xl-12">
+		<%= render 'show_more',  :events => @events  %>
 		<% if @events.next_page %>
 		    <span id="more">
 			<%= render 'show_more',  :events => @events  %>
