--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3173,6 +3173,10 @@ p.date { font-weight: bold;
   }
 }
 
+.bottom-event-blog-row {
+border-top: 1px solid #dcdcdd;
+}
+
 .event-blog-row {
   position: relative;
   z-index: 2;
