--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -31,8 +31,10 @@
 <% end %>
 
 <div id='events'>
+  <div class="posts-list" id="posts">
     <%= render 'events', :events => @events %>
     <div class="row"></div>
+</div>
 </div>
 <div class="bottom-event-blog-row">
     <div class="container more-top">
