--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -29,9 +29,9 @@
 	</div>
     </div>
 <% end %>
-
+</div>
 <div id='events'>
-  <div class="posts-list" id="posts">
+  <div class="posts-list">
     <%= render 'events', :events => @events %>
     <div class="row"></div>
 </div>
