--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -2,7 +2,7 @@
 <% @events.next_page %>
 
 
-<% events.each do |event| %>
+<% @events.each do |event| %>
 
     <% if params[:past] %>
 	<% date = event.prev_date %>
