--- a/app/views/blog_posts/_posts.html.erb
+++ b/app/views/blog_posts/_posts.html.erb
@@ -3,7 +3,7 @@
 <%= render 'post', :post => post %>
 
 <% end %>
-<div class='row bottom-event-row'>
+<div class='row bottom-event-blog-row'>
   <div class='container more-top'>
     <% if @posts.next_page %>
 		<%= render 'show_more',  :posts => @posts  %>
