--- a/app/views/blog_posts/_posts.html.erb
+++ b/app/views/blog_posts/_posts.html.erb
@@ -3,6 +3,7 @@
 <%= render 'post', :post => post %>
 
 <% end %>
+</div>
 <div class='row bottom-event-blog-row'>
   <div class='container more-top'>
     <% if @posts.next_page %>
@@ -12,5 +13,16 @@
 
 
 
+  </div>
+
+
+  <div class="posts-list to-top-after-load">
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-12 col-lg-12 col-nd-12 col-sm-12 col-12">
+          <a class="to-top" href="#top">To Top</a>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
