--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -19,6 +19,7 @@
 
   <div class="posts-list" id="posts">
     <%= render 'posts', posts: @posts %>
+    <div class="row"></div>
 </div>
 <div class='row bottom-event-blog-row'>
   <div class='container more-top'>
