--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -12,6 +12,7 @@
 <% if date %>
     <div class="event-blog-row">
 	<div class="container">
+<h3><%= event.id %></h3>
 	    <a href="events/<%= date.event.slug %>">
 		<div class="row">
 		    <div class="col-xl-8 order-xl-last col-lg-8 order-lg-last col-md-12 col-sm-12 col-12">
