--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -42,7 +42,7 @@
 	<div class="row">
 	    <div class="col-xl-12">
 
-		<% if @events.next_page %>
+		<% if @current_page < @last_page %>
 		    <span id="more">
 			<%= render 'show_more',  :events => @events  %>
 		    </span>
