--- a/app/views/events/index.js.erb
+++ b/app/views/events/index.js.erb
@@ -3,7 +3,7 @@
   show_page(request.fullpath, params[:page] ? params[:page].to_i + 1 : 2)
   %>');
 
-<% if !(@events.next_page) %>
+<% if false %>
 $("#more").remove();
 $(".more-top").remove();
 <% end %>
