--- a/app/views/events/index.js.erb
+++ b/app/views/events/index.js.erb
@@ -1,6 +1,6 @@
-alert("events");
-$("#events").replace("<%= escape_javascript render('events', :events => @events)  %>");
-alert("foo");
+$("#events").replace("ooooohhh");
+
+// $("#events").replace("<%= escape_javascript render('events', :events => @events)  %>");
   $("#show_more_link").attr("href", '<%=
   show_page(request.fullpath, params[:page] ? params[:page].to_i + 1 : 2)
   %>');
