--- a/app/views/events/index.js.erb
+++ b/app/views/events/index.js.erb
@@ -1,5 +1,5 @@
-$("#events").replace("ooooohhh");
-
+$("#events").append("ooooohhh");
+$("#events").replace('foo');
 
   $("#show_more_link").attr("href", '<%=
   show_page(request.fullpath, params[:page] ? params[:page].to_i + 1 : 2)
