--- a/app/views/events/index.js.erb
+++ b/app/views/events/index.js.erb
@@ -1,5 +1,6 @@
-$("#events").append("ooooohhh");
-$("#events").replace('foo');
+
+
+ $("#events").html("<%= escape_javascript render('events', :events => @events)  %>");
 
   $("#show_more_link").attr("href", '<%=
   show_page(request.fullpath, params[:page] ? params[:page].to_i + 1 : 2)
