--- a/app/views/events/index.js.erb
+++ b/app/views/events/index.js.erb
@@ -6,7 +6,7 @@
   show_page(request.fullpath, params[:page] ? params[:page].to_i + 1 : 2)
   %>');
 
-<% if false %>
+<% if @current_page < @last_page %>
 $("#more").remove();
 $(".more-top").remove();
 <% end %>
