--- a/app/views/events/index.js.erb
+++ b/app/views/events/index.js.erb
@@ -1,12 +1,13 @@
 
 
+
  $("#events").html("<%= escape_javascript render('events', :events => @events)  %>");
 
   $("#show_more_link").attr("href", '<%=
   show_page(request.fullpath, params[:page] ? params[:page].to_i + 1 : 2)
   %>');
 
-<% if @current_page < @last_page %>
+<% if @current_page == @last_page %>
 $("#more").remove();
 $(".more-top").remove();
 <% end %>
