--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -1,6 +1,4 @@
 
-<% @events.next_page %>
-
 
 <% events.each do |event| %>
 
@@ -30,3 +28,6 @@
     </div>
 <% end %>
 <% end %>
+
+<%= @current_page %>
+<%= @last_page %>
