--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -18,7 +18,7 @@
 		    </div>
 		    <div class="col-xl-4 order-xl-first col-lg-4 order-lg-first col-md-12 col-sm-12 col-12">
 			<h3><%= show_date(date) %></h3>
-			<p class="small-caps date"><%= show_label(date, date.event.end_at) %></p>
+			<p class="small-caps date"><%= show_label(date, date.event.end_at.nil?) %></p>
 		    </div>
 
 		</div>
