fragment caching for events page

--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -1,4 +1,4 @@
-
+<% cache events do %>
 <% events.each do |event| %>
   <% cache event do %>
     <% if params[:past] %>
@@ -27,7 +27,5 @@
     </div>
 <% end %>
   <% end %>
-  <% end %>
-
-
-
+<% end %>
+<% end %>
