--- a/app/assets/stylesheets/_trey.scss
+++ b/app/assets/stylesheets/_trey.scss
@@ -278,7 +278,7 @@
     }
 
     .navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .show>.nav-link {
-        color:#18187d;
+        color:#b9ffff;
         background:#349dff;
     }
 
