Update color of active navbar link

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -524,7 +524,7 @@ body:not(.scrollup) .sm-logo-div {
   }
   .navbar-nav {
     .active > .nav-link {
-      color: #18187d;
+      color: #b9ffff;
       background: #349dff;
     }
     .nav-link {
