--- a/app/views/resources/_resources.html.erb
+++ b/app/views/resources/_resources.html.erb
@@ -22,14 +22,15 @@
       <div class="pagination pagination-bottom col-md-12">
 
 	<%= render :partial => '/layouts/pagination' %>
-      </div></div>
+      </div>
+    </div>
+  </div>
 
-<% if defined?(results) && results %>
 
   <style>
     .to-top-after-load {
     display:block;
     }
   </style>
-<% end %>
+
 
