--- a/app/views/layouts/_pagination.html.erb
+++ b/app/views/layouts/_pagination.html.erb
@@ -15,3 +15,20 @@ end
 
 
 <% end %>
+
+
+<div class="posts-list to-top-after-load">
+  <div class="container">
+    <div class="row">
+      <div class='col-9'>
+	<% if @resources.next_page %>
+	  <%= render 'show_more' %>
+	<% end %>
+      </div>
+      
+      <div class="col-3">
+	<a class="to-top" href="#top">To Top</a>
+      </div>
+    </div>
+  </div>
+</div>
