--- a/app/views/layouts/_pagination.html.erb
+++ b/app/views/layouts/_pagination.html.erb
@@ -1,3 +1,6 @@
+  <div class="container">
+    <div class="row">
+
 <% if params[:view] == 'all' %>
   1-<%= @resources.total_entries %> of <%= @resources.total_entries %> Items
 <% else %>
@@ -15,20 +18,18 @@ end
 
 
 <% end %>
-
+    </div>
+</div>
 
 <div class="posts-list to-top-after-load">
   <div class="container">
     <div class="row">
-      <div class='col-9'>
 	<% if @resources.next_page %>
 	  <%= render 'show_more' %>
 	<% end %>
-      </div>
-      
-      <div class="col-3">
+
 	<a class="to-top" href="#top">To Top</a>
-      </div>
+
     </div>
   </div>
 </div>
