--- a/app/views/layouts/_pagination.html.erb
+++ b/app/views/layouts/_pagination.html.erb
@@ -21,21 +21,11 @@ end
     </div>
 </div>
 
-
-  <div class="container">
-    <div class="row">
-      <div class='col-3'>
+<div class="posts-list to-top-after-load">
 	<% if @resources.next_page %>
 	  <%= render 'show_more' %>
 	<% end %>
-      </div>
-      <div class='col-6'>
-      </div>
-      <div class='col-3'>
+
 	<a class="to-top" href="#top">To Top</a>
-      </div>
 
-
-    </div>
-  </div>
-
+</div>
