--- a/app/views/resources/_resources.html.erb
+++ b/app/views/resources/_resources.html.erb
@@ -26,6 +26,14 @@
     </div>
   </div>
 
+<div class="posts-list to-top-after-load">
+	<% if @resources.next_page %>
+	  <%= render 'show_more' %>
+	<% end %>
+
+	<a class="to-top" href="#top">To Top</a>
+
+</div>
 
   <style>
     .to-top-after-load {
