--- a/app/views/resources/_resources.html.erb
+++ b/app/views/resources/_resources.html.erb
@@ -25,14 +25,18 @@
       </div>
     </div>
   </div>
-
-<div class="posts-list to-top-after-load">
+  <div class='container'>
+    <div class='row'>
+      <div class="posts-list to-top-after-load">
 	<% if @resources.next_page %>
 	  <%= render 'show_more' %>
 	<% end %>
-
+	
 	<a class="to-top" href="#top">To Top</a>
-
+	
+      </div>
+    </div>
+  </div>
 </div>
 
   <style>
