--- a/app/views/resources/_resources.html.erb
+++ b/app/views/resources/_resources.html.erb
@@ -28,12 +28,13 @@
   <div class='container'>
     <div class='row'>
       <div class="posts-list to-top-after-load">
+	
 	<% if @resources.next_page %>
 	  <%= render 'show_more' %>
 	<% end %>
-	
+	<div class='col-3'>
 	<a class="to-top" href="#top">To Top</a>
-	
+	</div>
       </div>
     </div>
   </div>
