--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -37,7 +37,33 @@
 
 <div id='resources'>
   <%= render 'resources', :resources => @resources, :results => (@search? @results : nil), cached: true %>
+  
 </div>
+  <div class='container'>
+    <div class='row'>
+
+	<div class='col-6'>
+	<% if @resources.next_page %>
+	  <%= render 'show_more' %>
+	<% end %>
+	</div>
+	<div class='col-6'>
+	        <div class="posts-list to-top-after-load">
+		  <a class="to-top" href="#top">To Top</a>
+</div>
+	</div>
+      </div>
+    </div>
+
+</div>
+
+  <style>
+    .to-top-after-load {
+    display:block;
+    }
+  </style>
+
+
 
 </div>
 </div>
