--- a/app/views/resources/_search_result.html.erb
+++ b/app/views/resources/_search_result.html.erb
@@ -66,7 +66,7 @@ str = ActionController::Base.helpers.strip_tags(result.content)
 			    <p class='topics small-caps'
 			       >
 			      <strong>Published</strong>
-			      <%= result.published_at.strftime('%F') %>
+			      <%= result.try(:published_at).try(:strftime, '%F') %>
 			</div>
 		    </div>
 
