--- a/app/views/resources/_search_result.html.erb
+++ b/app/views/resources/_search_result.html.erb
@@ -63,10 +63,13 @@ str = ActionController::Base.helpers.strip_tags(result.content)
 					Resource
 				    <% end %>
 				</p>
+				<% if result.published_at %>
 			    <p class='topics small-caps'
 			       >
 			      <strong>Published</strong>
 			      <%= result.try(:published_at).try(:strftime, '%F') %>
+			    </p>
+			    <% end %>
 			</div>
 		    </div>
 
